--- a/Index.html
+++ b/Index.html
@@ -65,6 +65,7 @@
 <p class="Text">Por cada local em que o jogador esteve, são atribuídos pontos de acordo com uma tabela prevista. Poderá haver perguntas em cada local, e a confirmação de que o jogador está no local é feita através de coordenadas GPS.</p>
 <br>
 <p class="Text">Quando o jogador atinge xxx pontos ganha prémios, (jantares, visitas a locais de turismo, estadias em hotéis, etc…).</p>
+<p class="Text">Quando o jogador atinge tantos pontos ganha prémios, (jantares, visitas a locais de turismo, estadias em hotéis, etc…).</p>
 <br>
 
 <div align="center"> 
